# ngsfeatures

./: .clang-format  .clang-format-ignore  .dockerignore  .doxygen-awesome.css  .editorconfig  .gitignore  .pre-commit-config.yaml  .ruffignore  .secrets.baseline  Alignment_8cc.html  Alignment_8cc.js  Alignment_8cc__incl.map  Alignment_8cc__incl.md5  Alignment_8cc_source.html  Alignment_8hh.html  Alignment_8hh.js  Alignment_8hh__dep__incl.map  Alignment_8hh__dep__incl.md5  Alignment_8hh__incl.map  Alignment_8hh__incl.md5  Alignment_8hh_source.html  AminoScoreIdentity_8hh.html  AminoScoreIdentity_8hh.js  AminoScoreIdentity_8hh__dep__incl.map  AminoScoreIdentity_8hh__dep__incl.md5  AminoScoreIdentity_8hh__incl.map  AminoScoreIdentity_8hh__incl.md5  AminoScoreIdentity_8hh_source.html  AminoScorePam120_8hh.html  AminoScorePam120_8hh.js  AminoScorePam120_8hh__dep__incl.map  AminoScorePam120_8hh__dep__incl.md5  AminoScorePam120_8hh__incl.map  AminoScorePam120_8hh__incl.md5  AminoScorePam120_8hh_source.html  AminoScore_8cc.html  AminoScore_8cc.js  AminoScore_8cc__incl.map  AminoScore_8cc__incl.md5  AminoScore_8cc_source.html  (+7140 more)
benchmarks/: CMakeLists.txt  README.md  benchmark_em  benchmark_em_algorithm.cc  benchmark_optimized_em  benchmark_optimized_em.cc  benchmark_selective_optimized_em  benchmark_selective_optimized_em.cc  benchmark_smart_optimized_em  benchmark_smart_optimized_em.cc
ematch_src/: CMakeLists.txt  FindCCompOfTag.cc  FindNeighboursWithQualJuxt  FindNeighboursWithQualJuxt.cc  FindNeighboursWithQualJuxtInList.pl  GenerateTagListFileWithBaseCount.pl  GenerateTagListFileWithBaseCount.py  RecountComputerForGraphOnDisk.cc  RecountComputerForGraphOnDisk.hh  RecountComputerForGraphOnDisk_SortedTagSet.cc  RecountComputerForGraphOnDisk_SortedTagSet.hh  RecountExpectationMatchingTagCorrector.cc  RecountExpectationMatchingTagCorrector.hh  RecountGradientSearchTagCorrector.cc  RecountGradientSearchTagCorrector.hh  RecountNeighborList.cc  RecountNeighborList.hh  RecountNeighborProbGraphFormat.hh  RecountNeighborProbGraphOnDisk.cc  RecountNeighborProbGraphOnDisk.hh  RecountNeighborProbGraphOnDisk_SortedTagSet.cc  RecountNeighborProbGraphOnDisk_SortedTagSet.hh  RecountNeighborProbGraphWriter.cc  RecountNeighborProbGraphWriter.hh  RecountNeighborProbGraphWriter_SortedTagSet.cc  RecountNeighborProbGraphWriter_SortedTagSet.hh  RecountTagCounts.cc  RecountTagCounts.hh  RecountTagCounts_SortedTagSet.cc  RecountTagCounts_SortedTagSet.hh  RecountTagIdProbPair.hh  SortedTagSet.cc  SortedTagSet.hh  TagSet.cc  TagSet.hh  compile_all.sh  create_avg_file_by_connected_component.pl  dumpRecountNeighborProbGraphOnDisk.cc  dumpRecountNeighborProbGraphOnDisk_ConnectedComponentSize  dumpRecountNeighborProbGraphOnDisk_ConnectedComponentSize.cc  (+12 more)
ematch_src/graph/: ConnectedComponentOnlineComputer.hh  MatrixGraph.hh  NeighborListGraph.cc  NeighborListGraph.hh
ematch_src/graph/run/: convertMultipleEdgePerLineToOneEdgePerLineFormat.cc  listConnectedComponents  listConnectedComponents.cc  makefile  printRandomRepresentativeFromEachConnectedComponent  printRandomRepresentativeFromEachConnectedComponent.cc  runAllShortestEdgeLengthPaths  runAllShortestEdgeLengthPaths.cc
ematch_src/graph/test/: makefile  testConnectedComponentOnlineComputer.cc
ematch_src/graph/try/: tryConnectedComponentOnlineComputer  tryMatrixGraph_printAdjacencyLists  tryMatrixGraph_readEdgesOneEdgePerLineFormat  tryMatrixGraph_readEdgesOneEdgePerLineFormat.cc  tryNeighborListGraph  tryNeighborListGraph.cc
ematch_src/utils/: Makefile.am  ptrUtils.hh  universalTypedefs.hh
ematch_src/utils/BitMatrix/: BitArray.cc  BitArray.hh  BitMatrix.cc  BitMatrix.hh  SymmetricBitMatrix.cc  SymmetricBitMatrix.hh
ematch_src/utils/BoundedLenFifo/: BoundedLenFifoVector.hh
ematch_src/utils/ChainHashtable/: ChainHashtable.hh  String2KeyHashtable.hh  StringHashtable.hh  StringKeyHashtable.hh  bitLeftRotate.hh  genericHashFunction.hh  nextPrime.hh  size_tToBinaryRepresentationString.hh
ematch_src/utils/FLArray/: ConstantLabeledSquareDoubleFLENumMatrix.cc  ConstantLabeledSquareDoubleFLENumMatrix.hh  FLArray.cc  FLArray.hh  FLArrayByIndexSortingPredicate.hh  FLArrayFunctions.hh  FLDiagonalMatrix.hh  FLEArray.hh  FLEArrayByIndexSortingPredicate.hh  FLEArrayFunctions.hh  FLEMatrix.hh  FLESorted.hh  FLMatrix.hh  FLMatrixFunctions.hh  FLSorted.hh  FLSorted2TypePairSet.hh  FLSortedFunctions.cc  FLSortedFunctions.hh  FLStack.hh  LabeledSquareFLENumMatrix.hh  Makefile.am  MallocArray.hh  README  VLArray.hh
ematch_src/utils/Matrix/: Matrix.hh  MatrixAlgorithm.hh
ematch_src/utils/SetWrapper/: SetWrapper.hh
ematch_src/utils/SortedStringSet/: SortedStringSet.hh
ematch_src/utils/Stats/: Ttable-gmp.hh  Ttable-long.hh  Ttable-new.hh  Ttable.hh  rankCorrelationFunctions.cc  rankCorrelationFunctions.hh  singleBinProb.cc
ematch_src/utils/VectorMap/: VectorMap.hh
ematch_src/utils/argvParsing/: ArgvParser.cc  ArgvParser.pod
ematch_src/utils/boost/: boostUtils.hh
ematch_src/utils/gdb/: gdbUtils.hh
knapsack_src/: CMakeLists.txt  KnapsackEnumerator.cc  KnapsackEnumerator.hh  KnapsackObject.hh  KnapsackObjectVector.cc  KnapsackObjectVector.hh  compile_knapsack.sh  makefile  tryKnapsackEnumerator.cc  tryKnapsackEnumeratorMultiProbes  tryKnapsackEnumeratorMultiProbes.cc  tryKnapsackObjectVector.cc
src/: AverageTagsQuals_27  AverageTagsQuals_27.cc  AverageTagsQuals_36  AverageTagsQuals_36.cc  CMakeLists.txt  EstimateTrueCount  EstimateTrueCount.cc  EstimateTrueCount_Capacity  EstimateTrueCount_Capacity.cc  EstimateTrueCount_EntropyFast  EstimateTrueCount_EntropyFast.cc  EstimateTrueCount_llratio  EstimateTrueCount_llratio.cc  EstimateTrueCount_optimized.cc  FindNeighboursWithQual  FindNeighboursWithQual.cc  GenerateProportion  GenerateProportion.cc  PickBaseQual  PickBaseQual.cc  Utilities.cc  Utilities.hh  convert_first_col2atcg.pl  convert_first_col2atcg.py  lr.pl  lr.py  lr_ccomp.pl  makefile  scc.pl  scc.py  summarize.sh
tests/: CMakeLists.txt  README.md  __init__.py  test_convert.py  test_scc.py
tests/unit/: CMakeLists.txt  test_utilities.cc
(+673 files in other folders)
