[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngsfeatures"
version = "2.0.0"
description = "Next Generation Sequencing Feature Generation Tool"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Edward Wijaya", email = "ewijaya@gmail.com"},
    {name = "Paul Horton", email = "p-horton@aist.go.jp"},
]
keywords = ["bioinformatics", "NGS", "sequencing", "feature-generation", "SVM"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/ewijaya/ngsfeatures"
Documentation = "https://github.com/ewijaya/ngsfeatures#readme"
Repository = "https://github.com/ewijaya/ngsfeatures"
Issues = "https://github.com/ewijaya/ngsfeatures/issues"

[project.scripts]
ngsfeatgen = "ngsfeatures.ngsfeatgen:main"
ngs-scc = "ngsfeatures.scc:main"
ngs-lr = "ngsfeatures.lr:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

# ============================================================================
# Ruff Configuration (Modern Python linter and formatter)
# ============================================================================

[tool.ruff]
target-version = "py37"
line-length = 100

# Source code directories
src = [".", "src", "ematch_src"]

# Exclude patterns
extend-exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# Enable these rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PL",     # pylint
    "PERF",   # performance anti-patterns
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"test_*.py" = ["ARG001", "PLR2004"]
"**/test/**" = ["ARG001", "PLR2004"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# ============================================================================
# MyPy Configuration (Static type checking)
# ============================================================================

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude patterns
exclude = [
    'build/',
    'dist/',
    '.venv/',
]

# ============================================================================
# Pytest Configuration
# ============================================================================

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",                    # Show summary of all test types
    "--strict-markers",       # Strict marker usage
    "--strict-config",        # Strict config
    "--showlocals",          # Show local variables in tracebacks
    "-v",                    # Verbose output
]

# Coverage options (when using pytest-cov)
[tool.coverage.run]
source = [".", "src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# ============================================================================
# Setup Tools Configuration
# ============================================================================

[tool.setuptools]
packages = ["ngsfeatures"]

[tool.setuptools.package-dir]
ngsfeatures = "src"
